# Rust_Library

./: .gitignore  HowToRun.md  README.md
config/: environment.properties.backup  environment.properties.example
data/: person.json
java_test/: Main.java  README.md  pom.xml
java_test/config/: environment.properties
java_test/src/main/java/com/example/: Main.java
java_test/src/main/java/com/example/config/: AppConfig.java
java_test/src/main/java/com/example/utils/: FileUtils.java
java_test/src/main/resources/: application.properties
secure_comm/: Cargo.toml  build.rs
secure_comm/config/: environment.properties
secure_comm/proto/: verifier.proto
secure_comm/src/: bindings.rs  config.rs  grpc_client.rs  https_client.rs  lib.rs  tpmr.rs  versionCheck.rs
secure_comm/src/proto/: mod.rs
