[package]
name = "secure_comm_lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "secure_comm_lib"
crate-type = ["cdylib"]

[dependencies]
jni = "0.21.1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
prost = "0.12.3"
tonic = { version = "0.11.0", features = ["transport", "tls", "tls-roots"] }
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Security_Cryptography",
  "Win32_Security_Cryptography_Certificates",
  "Win32_System_TpmBaseServices"   # <- add this
] }
sha2 = "0.10"
base64 = "0.22"

[build-dependencies]
tonic-build = "0.11.0"
protoc-bin-vendored = "3"

